[package]
name = "sharpen"
version = "0.0.1"
description = "A rust library for iterator element condensing and sharpening."
authors = ["Erik Zscheile <erik.zscheile@gmail.com>"]
categories = ["algorithms", "no-std"]
edition = "2018"
license = "MIT"
repository = "https://github.com/zserik/sharpen"

[dependencies]
