[package]
name = "sharpen"
version = "0.0.2"
description = "A rust library for iterator element condensing and sharpening."
authors = ["Erik Zscheile <erik.zscheile@gmail.com>"]
categories = ["algorithms", "no-std"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zserik/sharpen"

[dependencies]

[dev-dependencies]
criterion = "0.2.11"

[[bench]]
name = "classify"
harness = false
